force-app/main/default/objects/Email_Recipient_User_List__mdt/Email_Recipient_User_List__mdt.object-meta.xml
<CustomObject>
    <label>Email Recipient User List</label>
    <pluralLabel>Email Recipient User List</pluralLabel>
</CustomObject>