force-app/main/default/objects/Email_Recipient_User_List__mdt/fields/Agreement_Terminated_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Terminated_Yesterday__c</fullName>
    <label>Agreement_Terminated_Yesterday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>