force-app/main/default/objects/Email_Recipient_User_List__mdt/fields/Agreement_Terminating_in_180_Days_wo_Bud__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Terminating_in_180_Days_wo_Bud__c</fullName>
    <label>Agreement_Terminating_in_180_Days_wo_Bud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>